test/fails/bad_geo/geotrans1.lgl
declare float cos(float f);
declare float sqrt(float f);
declare float acos(float f);

prototype {
    object point<r>;
    object vector<r>;
    object direction<r>;
    object matrix<r, r>;  // Weird declaration

    vector<r> +(vector<r> x, vector<r> y);
    vector<r> -(vector<r> x, vector<r> y);
    vector<r> *(vector<r> v, scalar s);
    vector<r> *(scalar s, vector<r> v);
    vector<r> -(vector<r> v);
    position<r> translate(position<r> p, vector<r> v);
    position<r> +(position<r> p, vector<r> v);
    vector<r> -(position<r> x, position<r> y);
    vector<r2> *(matrix<r1, r2>, vector<r1>);  // Expects that the frames are the same
    vector<r2> *(matrix<r1, r2>, direction<r1>);
    point<r2> *(matrix<r1, r2>, point<r1>);
    matrix<r1, r2> +(matrix<r1, r2>, matrix<r1, r2>);
    matrix<r1, r3> *(matrix<r1, r2>, matrix<r2, r3>);
}

void main() {
}